# japanese-transformers-demo

./: .env.example  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  logger.py  pyproject.toml
