[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["nasuka <nasuka_s@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.88.0"
pandas = "^1.3.2"
python-dotenv = "^0.19.0"
huggingface-hub = "^0.0.16"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
